<resources>
    <string name="app_name">AppCalendar</string>
    <string name="nombre_iglesia">Iglesia Nuevos Comienzos Con Jesucristo</string>
    <string name="btn_inicio_sesion">Inicio de Sesión</string>
    <string name="login_titulo">Iniciar Sesión</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="btn_entrar">Entrar</string>
    <string name="siglas_iglesia">NCCJ</string>
    <string name="calendar_text">Mes y Año</string>
    <string name="user_name">Hola! Selecciona una opción</string>
    <string name="lideres_ncck">Líderes</string>
    <string name="mision_valores">Misión y Valores</string>
    <string name="help_center">Centro de Ayuda</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="lider_name">Nombre del líder</string>
    <string name="puesto">Puesto</string>
    <string name="telefono">Teléfono</string>
    <string name="btn_savelider">Guardar líder</string>
    <string name="titulo_mision">Mision:</string>
    <string name="mision">Somos una Iglesia con el fin de
        anunciar el evangelio, servir a la comunidad y promover la Fe.</string>
    <string name="titulo_vision">Visión:</string>
    <string name="Vision"> Evangelizar llevando la palabra de Cristo a quienes no lo conocen,
        ofreciendo un nuevo comienzo. Servir a la comunidad atendiendo sus
        necesidades y promoviendo una sociedad más pacífica. Fortalecer la fe
        respetando las enseñanzas de Jesús y preservando su palabra. Representar
        sus valores co</string>
    <string name="agregar_usuarios">Agregar Usuarios</string>
    <string name="edit_misionValores">Editar Misión y Valores</string>
    <string name="edit_eventos">Agregar Eventos</string>
    <string name="main">Pagina Principal</string>
    <string name="ingresar_l_deres">Ingresar Líderes</string>
    <string name="lideres">Líderes</string>
    <string name="even_titulo">Título del evento</string>
    <string name="event_descripcion">Descripción del evento</string>
    <string name="fecha_event">Fecha (ej. 2025-05-12)</string>
    <string name="save_event">Guardar evento</string>
    <string name="manual_usuario">Descargar Manual de Usuario</string>
    <string name="pdf">Descargar PDF</string>
    <string name="event_day">Selecciona un día con evento</string>
    <string name="agregar_evento">Agregar Evento</string>
    <array name="admin_options">
        <item>Administrador</item>
        <item>Usuario</item>
    </array>
</resources>
