<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/ver2">

    <EditText
        android:id="@+id/etLeaderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lider_name"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/etLeaderPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/puesto"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/etLeaderPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btnSaveLeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_savelider"
        android:textSize="16sp"
        android:background="#3FF445"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"/>
</LinearLayout>
