<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/ver2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvLoginTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_titulo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#007AFF"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_usuario"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0"
            android:background="@drawable/edittext_background"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_contrasena"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0"
            android:background="@drawable/edittext_background"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/btn_inicio_sesion"
            android:textColor="#FFFFFF"
            android:backgroundTint="#007AFF"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>
