<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ver2"
    android:padding="16dp">

    <!-- Parte superior del menú (foto del usuario) -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:paddingTop="30dp">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/user_icon" />
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textColor="#3FF445"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Lista de opciones del menú -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btn_leaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lideres_ncck"
            android:textSize="16sp"
            android:background="@android:color/holo_blue_dark"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btn_mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mision_valores"
            android:textSize="16sp"
            android:background="@android:color/holo_blue_dark"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_center"
            android:textSize="16sp"
            android:background="@android:color/holo_blue_dark"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>
