<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutAdminMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/ver2">

    <View
        android:layout_width="120dp"
        android:layout_height="4dp"
        android:layout_marginTop="18dp"
        android:background="#3FF445" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo_Iglesia"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_iglesiavii" />

    <!-- Nombre Iglesia -->
    <TextView
        android:id="@+id/tvNombreIglesia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_iglesia"
        android:textColor="#007AFF"
        android:textSize="27sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="12dp" />

    <!-- Botón de Main -->
    <Button
        android:id="@+id/btnMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:textColor="#FFFFFF"
        android:backgroundTint="#3FF445"
        android:background="@drawable/button_rounded"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:textSize="16sp" />


    <!-- Botón de Agregar Usuario -->
    <Button
        android:id="@+id/btnAgregarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_usuarios"
        android:textColor="#FFFFFF"
        android:backgroundTint="#3FF445"
        android:background="@drawable/button_rounded"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:textSize="16sp" />


</LinearLayout>
